# EasyPaper

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: docker-image.yml
backend/: Cargo.toml
backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
backend/src/application/: concept_lab.rs  entitlements.rs  mod.rs  paper_workflow.rs  ports.rs  study_pack.rs
backend/src/domain/: interpretation.rs  mod.rs  paper.rs  repositories.rs  research.rs  study_pack.rs
backend/src/infrastructure/: mod.rs  search.rs
backend/src/interfaces/: http.rs
backend/src/interfaces/http/: device.rs
backend/src/interfaces/http/handlers/: concepts.rs  health.rs  mod.rs  paper.rs  progress.rs  study_pack.rs  upload.rs
backend/src/llm/: client.rs  interpreter.rs  mod.rs
backend/src/models/: api.rs  interpretation.rs  mod.rs  paper.rs
backend/src/pdf/: extract.rs  mod.rs
backend/src/prompt/: templates.rs
backend/src/routes/: health.rs  mod.rs  paper.rs  upload.rs
backend/src/store/: mod.rs  sqlite.rs
deploy/: Caddyfile.example  offline-up.sh
scripts/: dev.sh  package-offline-deploy.sh
src/: App.tsx  index.css
src/components/: AiSettingsModal.tsx
src/contexts/: ReaderContext.tsx
src/lib/: api.ts  deviceIdentity.ts  llmProfile.ts  sanitizeSvg.ts
src/renderer/: blockRenderer.tsx
src/stores/: usePaperStore.ts
src/types/: index.ts
src/views/: ProcessingView.tsx  ReaderView.tsx  UploadView.tsx
(+18 files in other folders)
