[package]
name = "easypaper-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower = "0.5"

# HTTP 客户端（调 LLM）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
thiserror = "2"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 配置
dotenvy = "0.15"

# ID 生成
uuid = { version = "1", features = ["v4", "serde"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 数据库（SQLite）
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }

# 异步 trait
async-trait = "0.1"

# PDF 解析（M1 暂用，后续可能换 lopdf）
pdf-extract = "0.7"
